# findr

./: .gitignore  Cargo.toml  readme.md
src/: command.rs  errors.rs  main.rs  preprocess.rs  readme.md
