[package]
name = "findr"
version = "0.1.2"
authors = ["steve donovan <steve.j.donovan@gmail.com>"]

description = "expression-oriented version of Unix find command"
keywords = ["command-line","files","find"]
categories = ["command-line-utilities"]

repository = "https://github.com/stevedonovan/findr.git"
readme = "readme.md"
license="MIT"

[dependencies]
rhai = "0.8.2"
chrono-english = "0.1.2"
chrono = "0.4.1"
walkdir = "0.1.8"
gitignore = "1.0.6"
glob = "0.2.11"   
lapp = "0.3.1"


